--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,34 @@
 {
-    "name": "trntv/yii2-debug-xhprof",
+    "name": "intersvyaz/yii2-xhprof",
     "description": "xhprof panel for Yii2 debug module",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","yii2-debug","panel","xhprof"],
     "license": "MIT",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "Eugine Terentev",
             "email": "eugine@terentev.net"
+        },
+        {
+            "name": "kikimor",
+            "email": "i@kikimor.ru"
         }
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "yiisoft/yii2-debug": "*"
+        "yiisoft/yii2-debug": "*",
+        "ext-xhprof": "*"
     },
     "suggest": {
         "ext-xhprof": "Xhprof PHP profiler"
     },
     "autoload": {
         "psr-4": {
-            "trntv\\debug\\xhprof\\": ""
+            "intersvyaz\\xhprof\\": ""
         }
     },
     "extra": {
-        "bootstrap": "trntv\\debug\\xhprof\\panels\\XhprofPanel"
+        "bootstrap": "intersvyaz\\xhprof\\panels\\XhprofPanel"
     }
 }
